--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </style>
 </head>
 <body>
-    <div class="title">CA:</div>
+    <div class="title">CA: 4mLVwmXjNMipm9PqrgNagSeiT5zjPGLq8Dd1uPu4bonk</div>
     <button class="bonk-button" onclick="playBonk(this)">
         BONK!
     </button>
